--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,8 +47,9 @@
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/textEmail"
-            android:textSize="12sp" />
+            android:id="@+id/txtUser"
+            android:textSize="18sp"
+            android:layout_weight="0.18" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -63,9 +64,9 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:ems="10"
-            android:id="@+id/textPassword"
-            android:layout_weight="0"
-            android:textSize="12sp" />
+            android:id="@+id/txtPassword"
+            android:layout_weight="0.42"
+            android:textSize="18sp" />
     </LinearLayout>
 
     <LinearLayout
