--- a/app/src/main/res/layout/produto_list_view.xml
+++ b/app/src/main/res/layout/produto_list_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nome"
-            android:id="@+id/txtLName"
+            android:id="@+id/prodNomeLabel"
             android:layout_marginTop="10dp"
             android:textStyle="bold"
             android:textSize="12sp"
@@ -30,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Fornecedor"
-            android:id="@+id/txtLFornecedor"
+            android:id="@+id/prodFornecedorLabel"
             android:layout_marginTop="5dp"
             android:textSize="12sp"/>
 
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Preço"
-        android:id="@+id/txtLPrice"
+        android:id="@+id/prodPrecoLabel"
         android:layout_marginTop="10dp"
         android:layout_marginRight="5dp"
         android:textStyle="bold"
@@ -51,7 +51,7 @@
         android:text="Quant"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtLQuantidade"
+        android:id="@+id/prodQtdLabel"
         android:textStyle="bold"
         android:textColorLink="#0b1b9a"
         android:textSize="12sp"
