--- a/app/src/main/res/layout/activity_funcionario.xml
+++ b/app/src/main/res/layout/activity_funcionario.xml
@@ -36,16 +36,6 @@
                 android:gravity="center"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Funcionário:"
-                android:id="@+id/textView3"
-                android:textSize="14dp"
-                android:textStyle="bold"
-                android:gravity="center"
-                android:fontFamily="sans-serif" />
-
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -53,16 +43,18 @@
                 android:weightSum="1">
 
                 <EditText
-                    android:layout_width="188dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/txtFuncionario"
-                    android:textSize="14sp"
-                    android:layout_weight="1.15" />
+                    android:inputType="textPersonName"
+                    android:ems="10"
+                    android:id="@+id/pesquisaFunc"
+                    android:layout_weight="1"
+                    android:hint="Pesquisa Nome" />
 
                 <ImageButton
                     android:layout_width="44dp"
                     android:layout_height="39dp"
-                    android:id="@+id/btnFindProduto"
+                    android:id="@+id/imgBtnFindFunc"
                     android:layout_gravity="right"
                     android:src="@android:drawable/ic_search_category_default" />
 
@@ -82,15 +74,6 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="310dp">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
-                android:id="@+id/edtMatricula"
-                android:layout_weight="0.40"
-                android:hint="Matricula" />
 
             <EditText
                 android:layout_width="match_parent"
